force-app/main/default/objects/OpportunityLineItem/fields/CWS_ACVLine__c.field-meta.xml
<CustomField>
    <fullName>CWS_ACVLine__c</fullName>
    <description>Total Price of this line for 12 months</description>
    <inlineHelpText>Total Price of this line for 12 months</inlineHelpText>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>