force-app/main/default/objects/OpportunityLineItem/fields/CWS_Additional_Discount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Additional_Discount__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Disc. (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>