force-app/main/default/objects/OpportunityLineItem/fields/CWS_Additional_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Additional_Discount_Amount__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__AdditionalDiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Disc. (Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>