force-app/main/default/objects/OpportunityLineItem/fields/CWS_Commission_Only__c.field-meta.xml
<CustomField>
    <fullName>CWS_Commission_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Only</label>
    <type>Checkbox</type>
</CustomField>