force-app/main/default/objects/OpportunityLineItem/fields/CWS_Commission_Only_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Commission_Only_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Commission Only External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>