force-app/main/default/objects/OpportunityLineItem/fields/CWS_Discretionary_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Discretionary_Amount__c</fullName>
    <description>This is the additional discount applied by sales rep</description>
    <inlineHelpText>Additional discount applied by sales rep</inlineHelpText>
    <label>Discretionary Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>