force-app/main/default/objects/OpportunityLineItem/fields/CWS_Discretionary_Disc__c.field-meta.xml
<CustomField>
    <fullName>CWS_Discretionary_Disc__c</fullName>
    <label>Discretionary Disc (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>