force-app/main/default/objects/OpportunityLineItem/fields/CWS_Disti_Factor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Disti_Factor__c</fullName>
    <description>Disti factor for this product</description>
    <inlineHelpText>Disti factor for this product</inlineHelpText>
    <label>Disti Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>