force-app/main/default/objects/OpportunityLineItem/fields/CWS_Disti_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_Disti_Net_Price__c</fullName>
    <label>Disti Net Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>