force-app/main/default/objects/OpportunityLineItem/fields/CWS_Economic_Factor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Economic_Factor__c</fullName>
    <label>Economic Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>