force-app/main/default/objects/OpportunityLineItem/fields/CWS_End_Customer_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_End_Customer_Net_Price__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__CustomerPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>