force-app/main/default/objects/OpportunityLineItem/fields/CWS_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>CWS_Exchange_Rate__c</fullName>
    <description>Exchange RAte Based on Opportunity</description>
    <formula>Opportunity.CWS_Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>