force-app/main/default/objects/OpportunityLineItem/fields/CWS_Include_In_Minimum_Commit__c.field-meta.xml
<CustomField>
    <fullName>CWS_Include_In_Minimum_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate whether it is a min commit product or not.</description>
    <label>Include In Minimum Commit</label>
    <type>Checkbox</type>
</CustomField>