force-app/main/default/objects/OpportunityLineItem/fields/CWS_Legacy_Opportunity_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Opportunity_Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Opportunity Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>