force-app/main/default/objects/OpportunityLineItem/fields/CWS_License_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_License_Type__c</fullName>
    <label>License Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>