force-app/main/default/objects/OpportunityLineItem/fields/CWS_Margin__c.field-meta.xml
<CustomField>
    <fullName>CWS_Margin__c</fullName>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>