force-app/main/default/objects/OpportunityLineItem/fields/CWS_Min_Commit__c.field-meta.xml
<CustomField>
    <fullName>CWS_Min_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Twin field of Quote Line</description>
    <label>Min Commit</label>
    <type>Checkbox</type>
</CustomField>