force-app/main/default/objects/OpportunityLineItem/fields/CWS_Net_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Net_Total_Discount__c</fullName>
    <label>Net Total Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>