force-app/main/default/objects/OpportunityLineItem/fields/CWS_NetTotal__c.field-meta.xml
<CustomField>
    <fullName>CWS_NetTotal__c</fullName>
    <label>Custom Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>