force-app/main/default/objects/OpportunityLineItem/fields/CWS_Non_Min_Commit_Forecast_QR__c.field-meta.xml
<CustomField>
    <fullName>CWS_Non_Min_Commit_Forecast_QR__c</fullName>
    <label>Non Min Commit Forecast/QR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>