force-app/main/default/objects/OpportunityLineItem/fields/CWS_Period_for_ramp_spread_deferment__c.field-meta.xml
<CustomField>
    <fullName>CWS_Period_for_ramp_spread_deferment__c</fullName>
    <description>Number of months that special payment schedule is applicable</description>
    <inlineHelpText>Number of months that special payment schedule is applicable</inlineHelpText>
    <label>Period for ramp/ spread/ deferment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>