force-app/main/default/objects/OpportunityLineItem/fields/CWS_Price_Increase_Percent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Price_Increase_Percent__c</fullName>
    <description>Difference between renewal price and last year&apos;s total price on contract</description>
    <label>Price Increase (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>