force-app/main/default/objects/OpportunityLineItem/fields/CWS_Prior_ACV__c.field-meta.xml
<CustomField>
    <fullName>CWS_Prior_ACV__c</fullName>
    <description>This is total Annual Contract Value of last years&apos; contract</description>
    <label>Prior ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>