force-app/main/default/objects/OpportunityLineItem/fields/CWS_Prior_Annual_Reseller_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>CWS_Prior_Annual_Reseller_Net_Total__c</fullName>
    <formula>SBQQ__QuoteLine__r.CWS_Prior_Annual_Reseller_Net_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Annualized Reseller Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>