force-app/main/default/objects/OpportunityLineItem/fields/CWS_Projected_Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>CWS_Projected_Price_Increase__c</fullName>
    <description>It is the Projected increase of total price than prior year ACV</description>
    <label>Projected Price Increase (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>