force-app/main/default/objects/OpportunityLineItem/fields/CWS_Projected_Renewal_Value__c.field-meta.xml
<CustomField>
    <fullName>CWS_Projected_Renewal_Value__c</fullName>
    <label>Projected Renewal Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>