force-app/main/default/objects/OpportunityLineItem/fields/CWS_Promotional_Discount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Promotional_Discount__c</fullName>
    <label>Promotional Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>