force-app/main/default/objects/OpportunityLineItem/fields/CWS_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Quote_Type__c</fullName>
    <description>Twin field of quote type on Quote line</description>
    <label>Quote Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>