force-app/main/default/objects/OpportunityLineItem/fields/CWS_Regular_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_Regular_Price__c</fullName>
    <description>Price after pre-defined discounts</description>
    <inlineHelpText>Price after pre-defined discounts</inlineHelpText>
    <label>Regular Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>