force-app/main/default/objects/OpportunityLineItem/fields/CWS_Regular_Total__c.field-meta.xml
<CustomField>
    <fullName>CWS_Regular_Total__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__RegularTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use to capture the term for the Subscription product in that particular line</inlineHelpText>
    <label>Regular Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>