force-app/main/default/objects/OpportunityLineItem/fields/CWS_Regular_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_Regular_Unit_Price__c</fullName>
    <formula>SBQQ__QuoteLine__r.CWS_RegularPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regular Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>