force-app/main/default/objects/OpportunityLineItem/fields/CWS_Renewal_Uplift__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Uplift__c</fullName>
    <label>Renewal Uplift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>