force-app/main/default/objects/OpportunityLineItem/fields/CWS_Reseller_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reseller_Net_Total__c</fullName>
    <label>Reseller Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>