force-app/main/default/objects/OpportunityLineItem/fields/CWS_SFA_End_Customer_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_SFA_End_Customer_Total_Price__c</fullName>
    <label>SFA End Customer Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>