force-app/main/default/objects/OpportunityLineItem/fields/CWS_SKU_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_SKU_Type__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.CWS_SKU_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU Type</label>
    <type>Text</type>
</CustomField>