force-app/main/default/objects/OpportunityLineItem/fields/CWS_SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>CWS_SubscriptionTerm__c</fullName>
    <formula>IF( CWS_Commission_Only__c ,PricebookEntry.Product2.SBQQ__SubscriptionTerm__c , SBQQ__QuoteLine__r.SBQQ__SubscriptionTerm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>