force-app/main/default/objects/OpportunityLineItem/fields/CWS_Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Total_Discount_Amount__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__TotalDiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>