force-app/main/default/objects/OpportunityLineItem/fields/CWS_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Transaction_Type__c</fullName>
    <description>Type of transaction that Is applicable to the quote line</description>
    <inlineHelpText>Type of transaction that Is applicable to the quote line</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New3</fullName>
            </value>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Swap-In</fullName>
            </value>
            <value>
                <fullName>Swap-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>