force-app/main/default/objects/OpportunityLineItem/validationRules/CWS_CMS_Products_Only_On_Master_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_CMS_Products_Only_On_Master_Opp</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),
Text(Product2.CWS_Source__c)  != &apos;CMS&apos;,
Opportunity.CWS_Master__c = true
)</errorConditionFormula>
    <errorMessage>On Opportunities marked as Master, only CMS products can be added</errorMessage>
</ValidationRule>