force-app/main/default/objects/OpportunityLineItem/validationRules/CWS_Prevent_Non_Admin_To_Add_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_Prevent_Non_Admin_To_Add_Product</fullName>
    <active>false</active>
    <description>Update from 7/8/21 - deactivated as a part of lead flow. No longer needed.</description>
    <errorConditionFormula>AND(
NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),
ISNEW(),
ISPICKVAL(Opportunity.Type, &apos;New Business&apos;), 
ISBLANK(Opportunity.SBQQ__PrimaryQuote__c),
NOT(
OR(
$Profile.Name =&apos;CWS_Master_Data_Admin&apos;,
$Profile.Name =&apos;System Administrator&apos;,
$Profile.Name =&apos;CWS_Global_Sales_Ops&apos;
)
) 
)</errorConditionFormula>
    <errorMessage>Please create a Quote to add products or contact your System Admin.</errorMessage>
</ValidationRule>