force-app/main/default/objects/OpportunityLineItem/validationRules/CWS_PreventFieldUpdates.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_PreventFieldUpdates</fullName>
    <active>true</active>
    <description>Opportunity Product fields cannot be edited once Opportunity is closed</description>
    <errorConditionFormula>AND(
IF(AND(CONTAINS($Setup.CWS_Bypass_Settings__c.CWS_Bypass_Objects__c,&apos;OpportunityLineItem&apos;),$Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),FALSE ,TRUE ),
And(
OR( ISPICKVAL( Opportunity.StageName,&apos;Closed Won&apos;),ISPICKVAL(Opportunity.StageName,&apos;Closed Lost&apos;)),
OR( ISCHANGED(Quantity),
     ISCHANGED(UnitPrice) 
)
)
)</errorConditionFormula>
    <errorMessage>You may not make any changes to Opportunity Products because this Opportunity is Closed.</errorMessage>
</ValidationRule>